--- a/samples/scala/src/main/res/layout/activity_simple.xml
+++ b/samples/scala/src/main/res/layout/activity_simple.xml
@@ -4,7 +4,7 @@
 
     <TextView
         android:id="@+id/scala_text_view"
-        android:text="@string/hello_scala"
+        android:text="@string/hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
